--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+
 .top{
       background-color: #0A33F3
       font-size: 50 px;
@@ -5,10 +6,22 @@
       color: blue;     
 }
 .felix-image{
-  background-image: url(my-images/felix.jpeg);
-  width: 500px;
-  height: 400px;
-  background-repeat: no-repeat;
-  margin-left: 160px;
-  margin-top: 40px;
+      background-image: url(my-images/felix.jpeg);
+      width: 500px;
+      height: 400px;
+      background-repeat: no-repeat;
+      margin-left: 160px;
+      margin-top: 40px;
+      margin-left: 60px;
+      margin-top: 10px;
+
 }
+.middle{
+      font-size: 40 px;
+      color: #F3A90A;
+      text-align: center;
+      text-decoration: underline;
+      text-transform: uppercase
+}
+
+
