--- a/css/styles.css
+++ b/css/styles.css
@@ -38,13 +38,23 @@
 }
 
 .header{
-       text-align: center;
+       text-align: left;
        font-size: 40;
        font-size: 40 px;
        color: #F3A90A;
-       text-align: center;
 }
+.sub-header{ 
+       text-align: center;
+       font-size: 40 px;
+}
+.Bottom-layout{
+       margin-left: 700px;
+       color: #F32A0A
 
-.Page{
-     text-align: center
-    }
+}
+              
+               
+             
+       
+
+
